# routes/index.js
@@ -1,13 +1,19 @@
+const passport = require('passport');
+
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
 
-router.get('/', (rec,res) => { 
-    //#swagger.tags=['Welcome']
-    res.send('Welcome to the Employee Management API');
-});
-
 router.use('/employees', require('./employees'));
 router.use('/departments', require('./departments'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res,next){
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
